--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <li class="home">
             <a class="nav-link active" aria-current="page" href="#">About</a>
           </li>
+          <li class="projects_link">
+            <a class="nav-link" href="#experience">Experience</a>
+          </li>
           <li class="experience_link">
             <a class="nav-link" href="#skills">Skills</a>
           <li class="skills_link">
             <a class="nav-link" href="#projects">Projects</a>
           </li>
-          </li>
-          <li class="projects_link">
-            <a class="nav-link" href="#experience">Experience</a>
           </li>
           <li class="contact_link">
             <a class="nav-link" href="#contact">Contact</a>
@@ -76,14 +76,192 @@
       <p> A highly <span style="font-weight:400;">Motivated Programmer</span>, <span
           style="font-weight:400;">Inquisitive Learner</span> and <span style="font-weight:400;">Fast Adapter</span>
         in
-        Web development, software engineering and UI / UX with relevant work experiences. Currently in the final year
-        of
-        bachelor’s degree in information technology at The Hong Kong Polytechnic University. Seeking to leverage my
+        Web development, software engineering and UI / UX with relevant work experiences. Currently working as a a software engineer specializing in C#, .NET, SQL, DevExpress, etc. 
+        With native proficiency in English, Chinese, and Korean, I have a proven ability to collaborate and solve problems effectively on global projects with teams from diverse backgrounds. Seeking to leverage my
         collaboration, communication, and programming skills to drive success across various fields.</p>
     </div>
   </div>
   </div>
   <!-----------------------------About(Home) ends--------------------------------------->
+  <!-----------------------------Experience starts--------------------------------------->
+  <div id="experience" class="experience">
+    <div class="post-heading text-center">
+      Experience()
+    </div>
+
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Software Engineer</h2>
+          <h5>BIPO, Korea, Jul 2024 – </h5>
+          <h4><strong>Worked as a Software Engineer at BIPO, a global HR and payroll provider, contributing to enterprise HR system development.</strong><br>
+            
+            <span style="font-style:italic;">
+              • Developed and maintained enterprise HR systems as part of a SaaS-based HRMS platform, using C# and .NET Framework.  <br>
+              • Utilizing Entity Framework for database access and applying a layered MVC architecture for a modular and maintainable backend. <br>
+              • Built responsive UI components with DevExpress controls (GridView, ComboBox, CallbackPanel), and implemented efficient asynchronous data exchange between front-end and back-end using JavaScript and Ajax Callback mechanisms. <br>
+              • Managed relational database systems (RDBMS), including Microsoft SQL Server, with responsibilities such as writing and optimizing SQL queries <br>
+              • Use of Jira and Azure DevOps, managing development tasks, issue tracking, and delivery with cross-functional teams    <br>
+              • Participated in QA coordination, functional testing support, and production deployment cycles <br>
+          </h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Full Stack Developer Training Bootcamp</h2>
+          <h5>Co-mento, Korea, Jul 2023 – Aug 2023</h5>
+          <h4><strong>
+            Successfully engaged in a 5-week on-the-job training (OJT) boot camp organized by Co-mento Co., Ltd.
+            Actively completed practical tasks aligned with the job requirements and met all evaluation
+            benchmarks.</strong><br>
+            <span style="font-style:italic;">
+              • Leveraged AWS Cloud web server functionalities, including VPC configuration, subnet setup, and
+              deployment of EC2 instances, each with distinct security group assignments. <br>
+              • Frontend development using html/css/javascript, publish and deployment of static web pages on Apache
+              http server and AWS Elastic Beanstalk. <br>
+              • 2tier Web server Architecture on WordPress and connection to AWS RDS(Relational Database) with
+              implementation of load-balancing feature to the server. <br>
+              • Evaluated server performances using jmeter and utilized lambda function to test and deploy REST API.
+              <br>
+          </h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Web Developer Intern</h2>
+          <h5>PwC, Hong Kong, Jan 2023 – Jun 2023</h5>
+
+          <h4><strong>
+            Worked in the Learning & Development department, as a web developer intern.</strong><br>
+            <span style="font-style:italic;">
+              • Developed over 10 web-based e-learning modules, using html/css /JavaScript, Storyline 360 and other
+              in-house software.<br>
+              • Project management responsibilities and cross-disciplinary communication, delivering high-quality
+              projects with multi-functional teams of developers, designers, and project managers to align project
+              objectives and ensure seamless workflow.<br>
+              • Git for robust version control, managing multiple versions of e-learning modules, facilitating efficient
+              team collaboration, and maintaining a consistent development workflow under tight deadlines. <br>
+              • Responsible for User Acceptance Testing (UAT) processes, cooperating with project stakeholders to refine
+              functionality and secure consensus for the software's go-live process. <br>
+          </h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>UI / UX Designer & Engineer</h2>
+          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
+
+          <h4>
+            Worked in the Information Technology Services Office(ITS) in PolyU, as a student assistant.<br>
+            <span style="font-style:italic;">
+              • Designed and implemented 50+ user interface pages and crafted 20+ unique app logos, ensuring consistency
+              and user engagement.<br>
+              • Frontend App development & testing using html/css/ JavaScript, React Native, and Android Studio, to
+              create responsive and intuitive user experiences. <br>
+              • Use of design tools such as Figma, WordPress, and Photoshop to deliver high-fidelity prototypes <br>
+          </h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Web Developer</h2>
+          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
+          <h4><strong>
+            Worked in a start-up company that provides immigration, education and IT related services and solutions, as
+            a web developer intern.</strong><br>
+            <span style="font-style:italic; ">
+              • Independently managed a branding project for a client, which included the company’s logo design and the
+              full-stack development of an E-commerce website in desktop and mobile versions. <br>
+              • UI / UX design, logo branding design renewal<br>
+              • Frontend Web development using html / css / node.js / react.js, etc.<br>
+              • Leveraged different React libraries to enhance the company’s website, such as React Router for page
+              routing and il8next for implementing Multi-language functions.<br>
+              • Web hosting & publishing using netlify, Godaddy
+            </span>
+          </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>UI / UX Engineer</h2>
+          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
+
+          <h4>
+            Worked as a part-time Student Assistant in Information Technology Services Office (ITS) in The Hong Kong
+            Polytechnic University.<br>
+            <span style="font-style:italic;">
+              • Responsible for UI / UX, App logo, branding design for the new mobile application for students in The
+              Hong Kong Polytechnic University<br>
+              • Designed 50+ User Interface pages, and 20+ App logos. <br>
+              • Communication with project manager and assisted App developers on App implementation on the client
+              side
+              using JavaScript, React native, Android Studio, etc. <br>
+          </h4>
+        </div>
+      </div>
+      <img src="img/uiux.png" id="ptImg">
+
+    </div>
+
+
+
+    <div class="internship ws">
+      <img src="img/wealthskey.png" id="internImg">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Web Developer</h2>
+          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
+          <h4>
+            Worked as an intern in a start-up company that provides immigration, education and IT related services and
+            solutions.<br>
+            <span style="font-style:italic; ">
+              • UI / UX design, logo branding design renewal<br>
+              • Frontend Web development and implementation using html / css(scss) / node.js / react.js, etc <br>
+              • Utilization of various libraries such as React Router for page routing, il8next for implementation of
+              Multi-language function.<br>
+              • Web hosting & publishing using netlify, Godaddy
+            </span>
+          </h4>
+          <a href="https://www.charter-rich.com/" style="color:#7DB7FF; padding-left:0%;"><i class="fa fa-link"
+              style="font-size:4vw"></i></a>
+          <a href="https://github.com/1day1commit/CharterRich" style="color:#7DB7FF"><i class="fa fa-github"
+              style="font-size:4vw"></i></a>
+        </div>
+      </div>
+    </div> -->
+    <div class="internship_last">
+      <div class="card-text">
+        <h2>Sergeant, Republic of Korea Army</h2>
+        <h5>Republic of Korean Army (ROKA), Korea / Jun 2020 - Dec 2021</h5>
+        <h4>Performed Compulsory military service for 18 months.
+          <span id="exp_last" style="font-style:italic; ">
+            • Worked as a signal operator that deals with army communication, such as preventive maintenance on
+            communication equipments, and activating connections between subordinary units of a brigade.<br>
+            • Led a team of 10+ as a squad leader to participate in military exercises and battle drills. <br>
+          </span>
+        </h4>
+      </div>
+    </div>
+  </div>
+
+
+  <!-----------------------------Experience ends--------------------------------------->
   <!-----------------------------Skills starts--------------------------------------->
   <section id="skills" class="skills">
     <div class="post-heading text-center">
@@ -267,165 +445,7 @@
 
   </div>
   <!-----------------------------Projects Ends--------------------------------------->
-  <!-----------------------------Experience starts--------------------------------------->
-  <div id="experience" class="experience">
-    <div class="post-heading text-center">
-      Experience()
-    </div>
-    <div class="internship ui">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>Full Stack Developer Training Bootcamp</h2>
-          <h5>Co-mento, Korea, Jul 2023 – Aug 2023</h5>
-          <h4>
-            Successfully engaged in a 5-week on-the-job training (OJT) boot camp organized by Co-mento Co., Ltd.
-            Actively completed practical tasks aligned with the job requirements and met all evaluation
-            benchmarks.<br>
-            <span style="font-style:italic;">
-              • Leveraged AWS Cloud web server functionalities, including VPC configuration, subnet setup, and
-              deployment of EC2 instances, each with distinct security group assignments. <br>
-              • Frontend development using html/css/javascript, publish and deployment of static web pages on Apache
-              http server and AWS Elastic Beanstalk. <br>
-              • 2tier Web server Architecture on WordPress and connection to AWS RDS(Relational Database) with
-              implementation of load-balancing feature to the server. <br>
-              • Evaluated server performances using jmeter and utilized lambda function to test and deploy REST API.
-              <br>
-          </h4>
-        </div>
-      </div>
-    </div>
 
-    <div class="internship ui">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>Web Developer Intern</h2>
-          <h5>PwC, Hong Kong, Jan 2023 – Jun 2023</h5>
-
-          <h4>
-            Worked in the Learning & Development department, as a web developer intern.<br>
-            <span style="font-style:italic;">
-              • Developed over 10 web-based e-learning modules, using html/css /JavaScript, Storyline 360 and other
-              in-house software.<br>
-              • Project management responsibilities and cross-disciplinary communication, delivering high-quality
-              projects with multi-functional teams of developers, designers, and project managers to align project
-              objectives and ensure seamless workflow.<br>
-              • Git for robust version control, managing multiple versions of e-learning modules, facilitating efficient
-              team collaboration, and maintaining a consistent development workflow under tight deadlines. <br>
-              • Responsible for User Acceptance Testing (UAT) processes, cooperating with project stakeholders to refine
-              functionality and secure consensus for the software's go-live process. <br>
-          </h4>
-        </div>
-      </div>
-    </div>
-
-    <div class="internship ui">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>UI / UX Designer & Engineer</h2>
-          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
-
-          <h4>
-            Worked in the Information Technology Services Office(ITS) in PolyU, as a student assistant.<br>
-            <span style="font-style:italic;">
-              • Designed and implemented 50+ user interface pages and crafted 20+ unique app logos, ensuring consistency
-              and user engagement.<br>
-              • Frontend App development & testing using html/css/ JavaScript, React Native, and Android Studio, to
-              create responsive and intuitive user experiences. <br>
-              • Use of design tools such as Figma, WordPress, and Photoshop to deliver high-fidelity prototypes <br>
-          </h4>
-        </div>
-      </div>
-    </div>
-
-    <div class="internship ui">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>Web Developer</h2>
-          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
-          <h4>
-            Worked in a start-up company that provides immigration, education and IT related services and solutions, as
-            a web developer intern.<br>
-            <span style="font-style:italic; ">
-              • Independently managed a branding project for a client, which included the company’s logo design and the
-              full-stack development of an E-commerce website in desktop and mobile versions. <br>
-              • UI / UX design, logo branding design renewal<br>
-              • Frontend Web development using html / css / node.js / react.js, etc.<br>
-              • Leveraged different React libraries to enhance the company’s website, such as React Router for page
-              routing and il8next for implementing Multi-language functions.<br>
-              • Web hosting & publishing using netlify, Godaddy
-            </span>
-          </h4>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- <div class="internship ui">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>UI / UX Engineer</h2>
-          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
-
-          <h4>
-            Worked as a part-time Student Assistant in Information Technology Services Office (ITS) in The Hong Kong
-            Polytechnic University.<br>
-            <span style="font-style:italic;">
-              • Responsible for UI / UX, App logo, branding design for the new mobile application for students in The
-              Hong Kong Polytechnic University<br>
-              • Designed 50+ User Interface pages, and 20+ App logos. <br>
-              • Communication with project manager and assisted App developers on App implementation on the client
-              side
-              using JavaScript, React native, Android Studio, etc. <br>
-          </h4>
-        </div>
-      </div>
-      <img src="img/uiux.png" id="ptImg">
-
-    </div>
-
-
-
-    <div class="internship ws">
-      <img src="img/wealthskey.png" id="internImg">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>Web Developer</h2>
-          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
-          <h4>
-            Worked as an intern in a start-up company that provides immigration, education and IT related services and
-            solutions.<br>
-            <span style="font-style:italic; ">
-              • UI / UX design, logo branding design renewal<br>
-              • Frontend Web development and implementation using html / css(scss) / node.js / react.js, etc <br>
-              • Utilization of various libraries such as React Router for page routing, il8next for implementation of
-              Multi-language function.<br>
-              • Web hosting & publishing using netlify, Godaddy
-            </span>
-          </h4>
-          <a href="https://www.charter-rich.com/" style="color:#7DB7FF; padding-left:0%;"><i class="fa fa-link"
-              style="font-size:4vw"></i></a>
-          <a href="https://github.com/1day1commit/CharterRich" style="color:#7DB7FF"><i class="fa fa-github"
-              style="font-size:4vw"></i></a>
-        </div>
-      </div>
-    </div> -->
-    <div class="internship_last">
-      <div class="card-text">
-        <h2>Sergeant, Republic of Korea Army</h2>
-        <h5>Republic of Korean Army (ROKA), Korea / Jun 2020 - Dec 2021</h5>
-        <h4>Performed Compulsory military service for 18 months.
-          <span id="exp_last" style="font-style:italic; ">
-            • Worked as a signal operator that deals with army communication, such as preventive maintenance on
-            communication equipments, and activating connections between subordinary units of a brigade.<br>
-            • Led a team of 10+ as a squad leader to participate in military exercises and battle drills. <br>
-          </span>
-        </h4>
-      </div>
-    </div>
-  </div>
-
-
-  <!-----------------------------Experience ends--------------------------------------->
 
 
   <!-----------------------------Footer starts--------------------------------------->
